{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 12,
  "lineage": "dd54f56d-ca03-13d6-dd14-81a2a7015f03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example_machine",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fad60afc7ea1563b",
            "domain": "vpc",
            "id": "eipalloc-0b03dc795f3bdeb4a",
            "instance": "i-0bdf2f0c3b6a5bf9c",
            "network_interface": "eni-09a6bf5bf524a0f9a",
            "private_dns": "ip-10-0-52-24.eu-central-1.compute.internal",
            "private_ip": "10.0.52.24",
            "public_dns": "ec2-18-194-113-194.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.113.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.example_machine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_machine",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cf43aca3e6f3de3",
            "arn": "arn:aws:ec2:eu-central-1:577828718849:instance/i-0bdf2f0c3b6a5bf9c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0bdf2f0c3b6a5bf9c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-09a6bf5bf524a0f9a",
            "private_dns": "ip-10-0-52-24.eu-central-1.compute.internal",
            "private_ip": "10.0.52.24",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c2ce25322b5863e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01265dd6864ad910e",
            "tags": {
              "Name": "aws_example"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001cacb0dbfb64422"
            ]
          },
          "depends_on": [
            "aws_security_group.example_machine",
            "aws_subnet.example_machine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_machine",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-057c2a4fa99f5973c",
            "owner_id": "577828718849",
            "tags": {
              "Name": "example_machine"
            },
            "vpc_id": "vpc-0c8223bcccec3baae"
          },
          "depends_on": [
            "aws_vpc.example_machine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_machine",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05aff315972367f21",
            "owner_id": "577828718849",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057c2a4fa99f5973c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example_machine"
            },
            "vpc_id": "vpc-0c8223bcccec3baae"
          },
          "depends_on": [
            "aws_internet_gateway.example_machine",
            "aws_vpc.example_machine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example_machine",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc40f5979cda602b",
            "route_table_id": "rtb-05aff315972367f21",
            "subnet_id": "subnet-01265dd6864ad910e"
          },
          "depends_on": [
            "aws_route_table.example_machine",
            "aws_subnet.example_machine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_machine",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577828718849:security-group/sg-001cacb0dbfb64422",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001cacb0dbfb64422",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": null,
            "owner_id": "577828718849",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c8223bcccec3baae"
          },
          "depends_on": [
            "aws_vpc.example_machine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_machine",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577828718849:subnet/subnet-01265dd6864ad910e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-01265dd6864ad910e",
            "map_public_ip_on_launch": false,
            "owner_id": "577828718849",
            "vpc_id": "vpc-0c8223bcccec3baae"
          },
          "depends_on": [
            "aws_vpc.example_machine"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example_machine",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577828718849:vpc/vpc-0c8223bcccec3baae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe7df29c3847118a",
            "default_route_table_id": "rtb-0f8a73836c00e3c59",
            "default_security_group_id": "sg-02181fa1da1095d4d",
            "dhcp_options_id": "dopt-e3608289",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c8223bcccec3baae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f8a73836c00e3c59",
            "owner_id": "577828718849",
            "tags": {
              "Name": "aws_example"
            }
          }
        }
      ]
    }
  ]
}